feat(v1-delete): PR3.5 — delete all v1 code, v2 is the only path
Closes the v2.0 rewrite. Every v1 class that the three previous PR-slices
replaced is now gone. The framework compiles and all 180 tests pass on
JDK 25 with nothing held back.

**Server bus**
- Deleted `MessageBus.java` (1 099 lines) and the companion server-side
  `Correlation.java` — both only used by the v1 socket transport.
- Deleted `v1adapter/MessageBusFacade.java` — the BusFacade adapter that
  wrapped MessageBus.
- `BusFacadeConfiguration` is now a single unconditional `@Bean` that
  always wires `BusLifecycleFacade`. The V1/V2 `@ConditionalOnProperty`
  inner-class split is gone.
- `BusV2Configuration` drops its `@ConditionalOnProperty` — the v2 bus
  starts unconditionally.

**Consumer engine v1 stack**
- Deleted the four bundle-side v1 consumer loop classes:
  `EventConsumer`, `ProjectorEvenConsumer`, `ObserverEventConsumer`,
  `SagaEventConsumer`.
- Deleted v1 `ConsumerStateStore` abstract class (evento-common) and its
  `InMemoryConsumerStateStore` impl.
- Removed the v1 `startEventConsumers` / `startSagaEventConsumers` /
  `startObserverEventConsumers` methods from the three manager classes.
  The managers' `parse()` / `getReferences()` / `getHandlers()` methods
  stay — the v2 engine startup still reads from them.
- `ConsumerComponentManager` drops the `isShuttingDown` supplier field
  and constructor parameter; the v2 engines use `EngineSupervisor`'s own
  shutdown mechanism.

**EventoBundle**
- `consumerStateStoreBuilder` removed from Builder.
- v2 consumer path is now the only path. `consumerEngineConfigBuilder`
  defaults to `ConsumerEngineConfig::inMemory` when unset, so demos and
  tests work without configuration.
- Shutdown hook changed from `isShuttingDown.set(true)` to
  `eventoBundle.get().stopV2Engines(Duration.ofSeconds(30))`.
- v1 static `sendConsumerRegistration()` deleted; only the v2 counterpart
  `sendConsumerRegistrationV2()` survives.
- `getEventConsumer()` always del